--- a/package.json
+++ b/package.json
@@ -9,14 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/vector-icons": "^13.0.0",
+    "@hookform/resolvers": "^3.1.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "date-fns": "^2.30.0",
     "expo": "~48.0.18",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-hook-form": "^7.45.2",
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.1.0",
+    "react-native-uuid": "^2.0.1",
+    "styled-components": "^6.0.5",
+    "victory": "^36.6.11",
+    "victory-native": "^36.6.11",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.27",
+    "@types/react-native": "^0.72.2",
+    "@types/styled-components-react-native": "^5.2.1",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
