--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "date-fns": "^2.30.0",
     "expo": "~48.0.18",
     "expo-app-loading": "^2.1.1",
+    "expo-auth-session": "~4.0.3",
+    "expo-crypto": "~12.2.1",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-native": "0.71.8",
